# sber_hack

./: .gitignore  README.md  pyproject.toml
notebooks/: catboost.ipynb  xgboost.ipynb
src/: data_preparation.ipynb
