[tool.poetry]
name = "gender_classification_hackathon"
version = "0.1.0"
description = "A project for the bank client gender prediction hackathon"
authors = ["zetpetneru@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
pandas = "^1.3.3"
numpy = "^1.26.2"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"
xgboost = "^1.4.2"
lightgbm = "^3.2.1"
catboost = "^1.2.2"
torch = "^2.1.1"
dask = "^2023.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
